refactor: change text content

--- a/recorded/index.html
+++ b/recorded/index.html
@@ -7,6 +7,7 @@
 
     <title>Aromas lanchonete</title>
 </head>
+
 <body>
     <!-- Cabeçalho -->
     <div>
@@ -17,14 +18,14 @@
     <div>
         <h2>Os melhores salgados da região</h2>
 
-        <h3>Combo: Coxinha com requeijão e um refri</h3>
+        <h3>Combo: Coxinha com requeijão mais um refri</h3>
 
-        <p>Nossos salgados são feitos com massa de batata e produtos de primeira qualidade!</p>
+        <p>Nossos salgados são feitos com massa de batata e produtos de primeira qualidade</p>
     </div>
 
     <!-- Rodapé -->
     <div>
-        <p>© 2022 - Todos os direitos reservados.</p>
+        <p>©2022 Todos os direitos reservados.</p>
     </div>
 </body>
 </html>
