feat(header): add links list

--- a/original/index.html
+++ b/original/index.html
@@ -9,6 +9,13 @@
 <body>
     <div id="header">
         <h1>Aromas lanchonete</h1>
+
+        <ul>
+            <li><a href="#">Produtos</a></li>
+            <li><a href="#">Preços</a></li>
+            <li><a href="#">Contato</a></li>
+            <li><a href="#">Faça seu pedido</a></li>
+        </ul>
     </div>
 
     <div id="main">
