--- a/recorded/index.html
+++ b/recorded/index.html
@@ -12,6 +12,13 @@
     <!-- Cabeçalho -->
     <div>
         <h1>Aromas lanchonete</h1>
+
+        <ul>
+            <li><a href="#">Produtos</a></li>
+            <li><a href="#">Preços</a></li>
+            <li><a href="#">Contato</a></li>
+            <li><a href="#">Faça seu pedido</a></li>
+        </ul>
     </div>
 
     <!-- Conteúdo principal -->
@@ -25,6 +32,33 @@
 
     <!-- Rodapé -->
     <div>
+        <div>
+            <h4>Produtos</h4>
+            <ul>
+                <li><a href="#">Fritos</a></li>
+                <li><a href="#">Assados</a></li>
+                <li><a href="#">Congelados</a></li>
+            </ul>
+        </div>
+        
+        <div>
+            <h4>Dicas</h4>
+            <ul>
+                <li><a href="#">Salgados com massa de batata</a></li>
+                <li><a href="#">Kibe com tempero caseiro</a></li>
+                <li><a href="#">Temperatura ideal do óleo</a></li>
+            </ul>
+        </div>
+
+        <div>
+            <h4>A empresa</h4>
+            <ul>
+                <li><a href="#">Por que o Aromas?</a></li>
+                <li><a href="#">Nossos diferenciais</a></li>
+                <li><a href="#">Regiões que atendemos</a></li>
+            </ul>
+        </div>
+        
         <p>©2022 Todos os direitos reservados.</p>
     </div>
 </body>
