fix: remove list content of the recorded folder and move to original folder

--- a/original/index.html
+++ b/original/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Aromas lanchonete</title>
 </head>
+
 <body>
-    <div id="header">
+    <!-- Cabeçalho -->
+    <div>
         <h1>Aromas lanchonete</h1>
 
         <ul>
@@ -18,14 +21,45 @@
         </ul>
     </div>
 
-    <div id="main">
+    <!-- Conteúdo principal -->
+    <div>
         <h2>Os melhores salgados da região</h2>
-        <h3>Combo: Coxinha com requeijão e um refri</h3>
-        <p>Nossos salgados são feitos com massa de batata e produtos de primeira qualidade.</p>
+
+        <h3>Combo: Coxinha com requeijão mais um refri</h3>
+
+        <p>Nossos salgados são feitos com massa de batata e produtos de primeira qualidade</p>
     </div>
 
-    <div id="footer">
-        ©2022 Todos os direitos reservados.
+    <!-- Rodapé -->
+    <div>
+        <div>
+            <h4>Produtos</h4>
+            <ul>
+                <li><a href="#">Fritos</a></li>
+                <li><a href="#">Assados</a></li>
+                <li><a href="#">Congelados</a></li>
+            </ul>
+        </div>
+        
+        <div>
+            <h4>Dicas</h4>
+            <ul>
+                <li><a href="#">Salgados com massa de batata</a></li>
+                <li><a href="#">Kibe com tempero caseiro</a></li>
+                <li><a href="#">Temperatura ideal do óleo</a></li>
+            </ul>
+        </div>
+
+        <div>
+            <h4>A empresa</h4>
+            <ul>
+                <li><a href="#">Por que o Aromas?</a></li>
+                <li><a href="#">Nossos diferenciais</a></li>
+                <li><a href="#">Regiões que atendemos</a></li>
+            </ul>
+        </div>
+
+        <p>©2022 Todos os direitos reservados.</p>
     </div>
 </body>
 </html>
