refactor(recorded): update to semantic tags

--- a/recorded/index.html
+++ b/recorded/index.html
@@ -10,64 +10,66 @@
 
 <body>
     <!-- Cabeçalho -->
-    <div>
+    <header>
         <h1>Aromas lanchonete</h1>
 
-        <ul>
-            <li>
-                <a href="#">Produtos</a>
-            </li>
-            <li>
-                <a href="#">Preços</a>
-            </li>
-            <li>
-                <a href="#">Contato</a>
-            </li>
-            <li>
-                <a href="#">Faça seu pedido</a>
-            </li>
-        </ul>
-    </div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Produtos</a>
+                </li>
+                <li>
+                    <a href="#">Preços</a>
+                </li>
+                <li>
+                    <a href="#">Contato</a>
+                </li>
+                <li>
+                    <a href="#">Faça seu pedido</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
     <!-- Conteúdo principal -->
-    <div>
+    <main>
         <h2>Os melhores salgados da região</h2>
 
         <h3>Combo: Coxinha com requeijão mais um refri</h3>
 
         <p>Nossos salgados são feitos com massa de batata e produtos de primeira qualidade</p>
-    </div>
+    </main>
 
     <!-- Rodapé -->
-    <div>
-        <div>
+    <footer>
+        <nav>
             <h4>Produtos</h4>
             <ul>
                 <li><a href="#">Fritos</a></li>
                 <li><a href="#">Assados</a></li>
                 <li><a href="#">Congelados</a></li>
             </ul>
-        </div>
+        </nav>
 
-        <div>
+        <nav>
             <h4>Dicas</h4>
             <ul>
                 <li><a href="#">Salgados com massa de batata</a></li>
                 <li><a href="#">Kibe com tempero caseiro</a></li>
                 <li><a href="#">Temperatura ideal do óleo</a></li>
             </ul>
-        </div>
+        </nav>
 
-        <div>
+        <nav>
             <h4>A empresa</h4>
             <ul>
                 <li><a href="#">Por que o Aromas?</a></li>
                 <li><a href="#">Nossos diferenciais</a></li>
                 <li><a href="#">Regiões que atendemos</a></li>
             </ul>
-        </div>
+        </nav>
 
         <p>©2022 Todos os direitos reservados.</p>
-    </div>
+    </footer>
 </body>
 </html>
