feat(original): add image to banner and sections of products and testimonials

--- a/original/index.html
+++ b/original/index.html
@@ -25,11 +25,63 @@
 
     <!-- Conteúdo principal -->
     <main>
-        <h2>Os melhores salgados da região</h2>
+        <section id="banner-highlight">
+            <h2>Os melhores salgados da região</h2>
 
-        <h3>Combo: Coxinha com requeijão mais um refri</h3>
+            <h3>Combo: Coxinha com requeijão mais um refri</h3>
 
-        <p>Nossos salgados são feitos com massa de batata e produtos de primeira qualidade</p>
+            <p>Nossos salgados são feitos com massa de batata e produtos de primeira qualidade</p>
+
+            <img src="images/salgado-com-refri.jpg">
+        </section>
+
+        <section id="products">
+            <article>
+                <img src="images/salgados-assados.jpeg" alt="1">
+                <h2>Assados</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </article>
+
+            <article>
+                <img src="images/salgados-fritos.jpeg" alt="2">
+                <h2>Fritos</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </article>
+
+            <article>
+                <img src="images/salgados-congelados.jpeg" alt="3">
+                <h2>Congelados</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </article>
+        </section>
+
+        <section id="testimonials">
+            <ul>
+                <li>
+                    <img src="images/maria.jpg">
+                    <div>
+                        <h3>Maria Kravets <span>@Maria</span></h3>
+                        <p>Salgados perto de casa e com ótima qualidade 🙌🏼💯. Ótimo atendimento e produtos deliciosos ❤️</p>
+                    </div>
+                </li>
+
+                <li>
+                    <img src="images/diogo.jpg">
+                    <div>
+                        <h3>Diogo Kpelo <span>@DiogoKpelo</span></h3>
+                        <p>Atende pelo iFood e compramos todo final de semana. Meu filho é viciado nos hamburguinho 🔥🔥🔥</p>
+                    </div>
+                </li>
+
+                <li>
+                    <img src="images/tatiane.jpg">
+                    <div>
+                        <h3>Tatiane Moreira <span>@tate</span></h3>
+                        <p>Por morarmos longe sempre que passo na região de Guarulhos compro as bandejas de congelados! O kibe é perfeitoooo!</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
     </main>
 
     <!-- Rodapé -->
