refactor(original): update content

--- a/original/index.html
+++ b/original/index.html
@@ -15,10 +15,18 @@
 
         <nav>
             <ul>
-                <li><a href="#">Produtos</a></li>
-                <li><a href="#">Preços</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><a href="#">Faça seu pedido</a></li>
+                <li>
+                    <a href="#">Produtos</a>
+                </li>
+                <li>
+                    <a href="#">Preços</a>
+                </li>
+                <li>
+                    <a href="#">Contato</a>
+                </li>
+                <li>
+                    <a href="#">Faça seu pedido</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -32,53 +40,51 @@
 
             <p>Nossos salgados são feitos com massa de batata e produtos de primeira qualidade</p>
 
-            <img src="images/salgado-com-refri.jpg">
+            <img src="images/salgado-com-refri.jpg" alt="Coxinha com um refrigerante em lata">
         </section>
 
         <section id="products">
+            <h2>Produtos</h2>
+
             <article>
-                <img src="images/salgados-assados.jpeg" alt="1">
-                <h2>Assados</h2>
+                <img src="images/salgados-assados.jpeg" alt="Salgados assados">
+                <h3>Assados</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </article>
 
             <article>
-                <img src="images/salgados-fritos.jpeg" alt="2">
-                <h2>Fritos</h2>
+                <img src="images/salgados-fritos.jpeg" alt="Salgados fritos">
+                <h3>Fritos</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </article>
 
             <article>
-                <img src="images/salgados-congelados.jpeg" alt="3">
-                <h2>Congelados</h2>
+                <img src="images/salgados-congelados.jpeg" alt="Salgados congelados">
+                <h3>Congelados</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </article>
         </section>
 
         <section id="testimonials">
+            <h2>Depoimentos</h2>
+
             <ul>
                 <li>
-                    <img src="images/maria.jpg">
-                    <div>
-                        <h3>Maria Kravets <span>@Maria</span></h3>
-                        <p>Salgados perto de casa e com ótima qualidade 🙌🏼💯. Ótimo atendimento e produtos deliciosos ❤️</p>
-                    </div>
+                    <img src="images/maria.jpg" alt="Maria">
+                    <h3>Maria Kravets <span>@MariaKravets</span></h3>
+                    <p>Salgados perto de casa e com ótima qualidade 🙌🏼💯. Ótimo atendimento e produtos deliciosos ❤️</p>
                 </li>
 
                 <li>
-                    <img src="images/diogo.jpg">
-                    <div>
-                        <h3>Diogo Kpelo <span>@DiogoKpelo</span></h3>
-                        <p>Atende pelo iFood e compramos todo final de semana. Meu filho é viciado nos hamburguinho 🔥🔥🔥</p>
-                    </div>
+                    <img src="images/diogo.jpg" alt="Diogo">
+                    <h3>Diogo Kpelo <span>@DiogoKpelo</span></h3>
+                    <p>Atende pelo iFood e compramos todo final de semana. Meu filho é viciado nos hamburguinho 🔥🔥🔥</p>
                 </li>
 
                 <li>
-                    <img src="images/tatiane.jpg">
-                    <div>
-                        <h3>Tatiane Moreira <span>@tate</span></h3>
-                        <p>Por morarmos longe sempre que passo na região de Guarulhos compro as bandejas de congelados! O kibe é perfeitoooo!</p>
-                    </div>
+                    <img src="images/tatiane.jpg" alt="Tatiane">
+                    <h3>Tatiane Moreira <span>@TatianeMoreira</span></h3>
+                    <p>Por morarmos longe sempre que passo na região de Guarulhos compro as bandejas de congelados! O kibe é perfeitoooo!</p>
                 </li>
             </ul>
         </section>
@@ -94,7 +100,7 @@
                 <li><a href="#">Congelados</a></li>
             </ul>
         </nav>
-        
+
         <nav>
             <h4>Dicas</h4>
             <ul>
