refactor: update html markup

--- a/original/index.html
+++ b/original/index.html
@@ -11,19 +11,24 @@
 <body>
     <!-- Cabeçalho -->
     <header>
-        <h1>Aromas lanchonete</h1>
+        <a id="logo" href="index.html">
+            <img src="images/aromas-logo.jpg" alt="Aromas lanchonete">
+        </a>
 
         <nav>
             <ul>
                 <li>
                     <a href="#">Produtos</a>
                 </li>
+                <li>|</li>
                 <li>
                     <a href="#">Preços</a>
                 </li>
+                <li>|</li>
                 <li>
                     <a href="#">Contato</a>
                 </li>
+                <li>|</li>
                 <li>
                     <a href="#">Faça seu pedido</a>
                 </li>
@@ -40,7 +45,7 @@
 
             <p>Nossos salgados são feitos com massa de batata e produtos de primeira qualidade</p>
 
-            <img src="images/salgado-com-refri.jpg" alt="Coxinha com um refrigerante em lata">
+            <img src="images/coxinha-com-refri-transparente.png" alt="Coxinha com um refrigerante em lata">
         </section>
 
         <section id="products">
