--- a/original/index.html
+++ b/original/index.html
@@ -6,6 +6,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Aromas lanchonete</title>
+
+    <style>
+        * {
+            box-sizing: border-box;
+            padding: 0;
+            margin: 0;
+        }
+
+        header {
+            background-color: #eceeef;
+            border-bottom: 2px solid #a5bac5;
+            padding-top: 24px;
+            padding-bottom: 24px;
+            padding-left: 24px;
+            padding-right: 24px;
+        }
+
+        /* clearfix */
+        header::after {
+            content: '';
+            clear: both;
+            display: table;
+        }
+
+        #logo {
+            display: block;
+            width: 200px;
+            float: left;
+        }
+
+        #logo img {
+            width: inherit;
+        }
+
+        header nav {
+            float: right;
+        }
+
+        header ul {
+            list-style: none;
+            padding-left: 0;
+        }
+
+        header li {
+            display: inline;
+        }
+
+        header li a {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            text-decoration: none;
+            color: #2a0f14;
+        }
+
+        a:hover {
+            color: #e18795;
+            text-decoration: underline;
+        }
+    </style>
 </head>
 
 <body>
