--- a/original/index.html
+++ b/original/index.html
@@ -118,14 +118,34 @@
             <article>
                 <img src="images/salgados-fritos.jpeg" alt="Salgados fritos">
                 <h3>Fritos</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </article>
 
             <article>
                 <img src="images/salgados-congelados.jpeg" alt="Salgados congelados">
                 <h3>Congelados</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </article>
+        </section>
+
+        <section id="faq">
+            <h2>Perguntas frequentes</h2>
+
+            <details>
+                <summary>Quantos salgados devo pedir?</summary>
+                <p>Para adultos nossa recomendação é de 10 a 15 salgados por pessoa. Essa quantidade depende da duração do evento e outros pratos servidos em conjunto.</p>
+            </details>
+
+
+            <details>
+                <summary>Qual o tamanho dos salgados?</summary>
+                <p>Nós consideramos nossos salgados tamanho festa, mas em relação ao que observamos no mercado, eles tem um tamanho razoavelmente maior. Os fritos variam de 15 g a 24 g. Os assados variam de  12 g a 24 g.</p>
+            </details>
+
+            <details>
+                <summary>Vocês tem kits a pronta entrega?</summary>
+                <p>Não. Trabalhamos somente com encomendas e agendamentos com antecedência para oferecer produtos de alta qualidade.</p>
+            </details>
         </section>
 
         <section id="testimonials">
@@ -182,7 +202,23 @@
             </ul>
         </nav>
 
-        <p>©2022 Todos os direitos reservados.</p>
+        <div>
+            <img src="images/mac-app-store.webp" alt="Mac App Store">
+
+            <img src="images/play-store.webp" alt="Play Store">
+
+            <small>
+                ©2022 Todos os direitos reservados.
+                Apple e o logotipo da Apple são marcas registadas da Apple Inc.
+                Mac App Store é marca de serviços da Apple Inc.
+                Google Play e o logotipo do Google Play são marcas registradas da Google Inc.
+                <a href="#">Privacidade</a>
+                |
+                <a href="#">Termos</a>
+                |
+                <a href="#">Preferências de cookies</a>
+            </small>
+        </div>
     </footer>
 </body>
 </html>
