feat(recorded): add initial styles

--- a/recorded/index.html
+++ b/recorded/index.html
@@ -6,6 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Aromas lanchonete</title>
+
+    <style>
+        header {
+            background-color: #eceeef;
+            border-bottom: 2px solid #a5bac5;
+            padding-left: 24px;
+            padding-top: 24px;
+            padding-right: 24px;
+            padding-bottom: 24px;
+        }
+
+        header img {
+            width: 200px;
+        }
+        
+        header ul {
+            list-style: none;
+            padding-left: 0;
+        }
+
+        header ul li {
+            display: inline;
+        }
+
+        header ul a {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            text-decoration: none;
+            color: #2a0f14;
+        }
+
+        header ul a:hover {
+            color: #e18795;
+            text-decoration: underline;
+        }
+    </style>
 </head>
 
 <body>
@@ -20,12 +55,15 @@
                 <li>
                     <a href="#">Produtos</a>
                 </li>
+                <li>|</li>
                 <li>
                     <a href="#">Preços</a>
                 </li>
+                <li>|</li>
                 <li>
                     <a href="#">Contato</a>
                 </li>
+                <li>|</li>
                 <li>
                     <a href="#">Faça seu pedido</a>
                 </li>
