feat(recorded): add section and testimonials styles

--- a/recorded/index.html
+++ b/recorded/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="styles/banner.css">
     <link rel="stylesheet" href="styles/button.css">
     <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/section.css">
+    <link rel="stylesheet" href="styles/testimonials.css">
 </head>
 
 <body>
@@ -61,8 +63,8 @@
             </div>
         </section>
 
-        <section id="products">
-            <h2>Produtos</h2>
+        <section class="section layout" id="products">
+            <h2 class="section-title">Produtos</h2>
 
             <article>
                 <img src="images/salgados-assados.jpeg" alt="Salgados assados">
@@ -83,8 +85,8 @@
             </article>
         </section>
 
-        <section id="faq">
-            <h2>Perguntas frequentes</h2>
+        <section class="section layout" id="faq">
+            <h2 class="section-title">Perguntas frequentes</h2>
 
             <details>
                 <summary>Quantos salgados devo pedir?</summary>
@@ -102,25 +104,25 @@
             </details>
         </section>
 
-        <section id="testimonials">
-            <h2>Depoimentos</h2>
+        <section class="testimonials section layout">
+            <h2 class="section-title">Depoimentos</h2>
 
-            <ul>
-                <li>
-                    <img src="images/maria.jpg" alt="Maria">
-                    <h3>Maria Kravets <span>@MariaKravets</span></h3>
+            <ul class="testimonials-list">
+                <li class="testimonials-list-item">
+                    <img class="testimonials-thumbnail" src="images/maria.jpg" alt="Maria">
+                    <h3>Maria Kravets <span class="testimonials-username">@MariaKravets</span></h3>
                     <p>Salgados perto de casa e com ótima qualidade 🙌🏼💯. Ótimo atendimento e produtos deliciosos ❤️</p>
                 </li>
 
-                <li>
-                    <img src="images/diogo.jpg" alt="Diogo">
-                    <h3>Diogo Kpelo <span>@DiogoKpelo</span></h3>
+                <li class="testimonials-list-item">
+                    <img class="testimonials-thumbnail" src="images/diogo.jpg" alt="Diogo">
+                    <h3>Diogo Kpelo <span class="testimonials-username">@DiogoKpelo</span></h3>
                     <p>Atende pelo iFood e compramos todo final de semana. Meu filho é viciado nos hamburguinho 🔥🔥🔥</p>
                 </li>
 
-                <li>
-                    <img src="images/tatiane.jpg" alt="Tatiane">
-                    <h3>Tatiane Moreira <span>@TatianeMoreira</span></h3>
+                <li class="testimonials-list-item">
+                    <img class="testimonials-thumbnail" src="images/tatiane.jpg" alt="Tatiane">
+                    <h3>Tatiane Moreira <span class="testimonials-username">@TatianeMoreira</span></h3>
                     <p>Por morarmos longe sempre que passo na região de Guarulhos compro as bandejas de congelados! O kibe é perfeitoooo!</p>
                 </li>
             </ul>
