feat(original): update float technicals to flexbox

--- a/original/index.html
+++ b/original/index.html
@@ -25,7 +25,7 @@
             <img src="images/aromas-logo.jpg" alt="Aromas lanchonete">
         </a>
 
-        <nav class="header-navigation">
+        <nav>
             <ul class="header-navigation-list">
                 <li class="header-navigation-item">
                     <a href="#">Produtos</a>
