feat(recorded): add styles to products section

--- a/recorded/index.html
+++ b/recorded/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/section.css">
     <link rel="stylesheet" href="styles/testimonials.css">
+    <link rel="stylesheet" href="styles/products.css">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
         <nav>
             <ul class="header-navigation-list">
                 <li class="header-navigation-item">
-                    <a href="#">Produtos</a>
+                    <a href="#products">Produtos</a>
                 </li>
                 <li class="header-navigation-item">|</li>
                 <li class="header-navigation-item">
@@ -63,25 +64,31 @@
             </div>
         </section>
 
-        <section class="section layout" id="products">
+        <section class="products section layout" id="products">
             <h2 class="section-title">Produtos</h2>
 
-            <article>
-                <img src="images/salgados-assados.jpeg" alt="Salgados assados">
-                <h3>Assados</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <article class="products-card">
+                <img class="products-card-column products-card-image" src="images/salgados-assados.jpeg" alt="Salgados assados">
+                <div class="products-card-column">
+                    <h3 class="products-card-title">Assados</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
             </article>
 
-            <article>
-                <img src="images/salgados-fritos.jpeg" alt="Salgados fritos">
-                <h3>Fritos</h3>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <article class="products-card products-card-reverse">
+                <img class="products-card-column products-card-image" src="images/salgados-fritos.jpeg" alt="Salgados fritos">
+                <div class="products-card-column">
+                    <h3 class="products-card-title">Fritos</h3>
+                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
             </article>
 
-            <article>
-                <img src="images/salgados-congelados.jpeg" alt="Salgados congelados">
-                <h3>Congelados</h3>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <article class="products-card">
+                <img class="products-card-column products-card-image" src="images/salgados-congelados.jpeg" alt="Salgados congelados">
+                <div class="products-card-column">
+                    <h3 class="products-card-title">Congelados</h3>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
             </article>
         </section>
 
