feat(original): add faq styles and underline in the section title

--- a/original/index.html
+++ b/original/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/section.css">
     <link rel="stylesheet" href="styles/testimonials.css">
     <link rel="stylesheet" href="styles/product.css">
+    <link rel="stylesheet" href="styles/faq.css">
 </head>
 
 <body>
@@ -92,23 +93,23 @@
             </article>
         </section>
 
-        <section id="faq" class="section layout">
+        <section class="faq section layout">
             <h2 class="section-title">Perguntas frequentes</h2>
 
-            <details>
-                <summary>Quantos salgados devo pedir?</summary>
-                <p>Para adultos nossa recomendação é de 10 a 15 salgados por pessoa. Essa quantidade depende da duração do evento e outros pratos servidos em conjunto.</p>
+            <details class="faq-details">
+                <summary class="faq-details-summary">Quantos salgados devo pedir?</summary>
+                <p class="faq-details-content">Para adultos nossa recomendação é de 10 a 15 salgados por pessoa. Essa quantidade depende da duração do evento e outros pratos servidos em conjunto.</p>
             </details>
 
 
-            <details>
-                <summary>Qual o tamanho dos salgados?</summary>
-                <p>Nós consideramos nossos salgados tamanho festa, mas em relação ao que observamos no mercado, eles tem um tamanho razoavelmente maior. Os fritos variam de 15 g a 24 g. Os assados variam de  12 g a 24 g.</p>
+            <details class="faq-details">
+                <summary class="faq-details-summary">Qual o tamanho dos salgados?</summary>
+                <p class="faq-details-content">Nós consideramos nossos salgados tamanho festa, mas em relação ao que observamos no mercado, eles tem um tamanho razoavelmente maior. Os fritos variam de 15 g a 24 g. Os assados variam de  12 g a 24 g.</p>
             </details>
 
-            <details>
-                <summary>Vocês tem kits a pronta entrega?</summary>
-                <p>Não. Trabalhamos somente com encomendas e agendamentos com antecedência para oferecer produtos de alta qualidade.</p>
+            <details class="faq-details">
+                <summary class="faq-details-summary">Vocês tem kits a pronta entrega?</summary>
+                <p class="faq-details-content">Não. Trabalhamos somente com encomendas e agendamentos com antecedência para oferecer produtos de alta qualidade.</p>
             </details>
         </section>
 
