--- a/recorded/index.html
+++ b/recorded/index.html
@@ -38,7 +38,7 @@
                 </li>
                 <li class="header-navigation-item">|</li>
                 <li class="header-navigation-item">
-                    <a href="#">Contato</a>
+                    <a href="contato.html">Contato</a>
                 </li>
                 <li class="header-navigation-item">
                     <a class="button" href="#">Faça seu pedido</a>
