--- a/recorded/index.html
+++ b/recorded/index.html
@@ -76,7 +76,7 @@
                 </div>
             </article>
 
-            <article class="products-card products-card-reverse">
+            <article class="products-card">
                 <img class="products-card-column products-card-image" src="images/salgados-fritos.jpeg" alt="Salgados fritos">
                 <div class="products-card-column">
                     <h3 class="products-card-title">Fritos</h3>
